--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -6422,7 +6422,7 @@ button.close {
 .carousel-caption {
   position: absolute;
   right: 15%;
-  /*bottom: 20px;*/
+  bottom: 20px;
   left: 15%;
   z-index: 10;
   padding-top: 20px;
