--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -12,7 +12,9 @@
 }
 
 #portfolio .portfolio-item .portfolio-link .portfolio-hover {
-	background: rgba(254,209,54,.9);
+	background: rgba(0,94,124,.9);
+	/*background: #005E7C;*/
+
 	position: absolute;
 	width: 100%;
 	height: 100%;
@@ -77,7 +79,6 @@
 
 
 
-
 .portfolio-modal .modal-content {
 	border-radius: 0;
 	background-clip: border-box;
@@ -87,15 +88,23 @@
 	min-height: 100%;
 	padding: 100px 0;
 	text-align: center;
+	/*-----*/
+	opacity: .9;
+	background-color: lightgray;
+	
 }
 
 .portfolio-modal .modal-content h2 {
 	margin-bottom: 15px;
 	font-size: 3em;
+	font-weight: bold;
+	color: #005E7C;
 }
 
 .portfolio-modal .modal-content p {
 	margin-bottom: 30px;
+	font-size: 18px;
+	line-height: 30px;
 }
 
 .portfolio-modal .modal-content p.item-intro {
@@ -157,12 +166,12 @@
 
 ::-moz-selection {
 	text-shadow: none;
-	background: #fed136;
+	background: #005E7C;
 }
 
 ::selection {
 	text-shadow: none;
-	background: #fed136;
+	background: #005E7C;
 }
 
 img::selection {
