--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -89,8 +89,8 @@
 	padding: 100px 0;
 	text-align: center;
 	/*-----*/
-	opacity: .9;
-	background-color: lightgray;
+	opacity: .85;
+	background-color: white;
 	
 }
 
