--- a/css/fullpage-slider.css
+++ b/css/fullpage-slider.css
@@ -27,6 +27,8 @@ body {
     -moz-background-size: cover;
     background-size: cover;
     -o-background-size: cover;
+    background-repeat: no-repeat;
+    padding: 310px 50px 20px;
 }
 
 footer {
