--- a/css/styles.css
+++ b/css/styles.css
@@ -24,12 +24,17 @@ body{
 	overflow-x: hidden;
 }
 
-/*#portfolio
-.portfolio-item 
-.portfolio-caption h4 { 
+.navbar-inverse {
+	background-color: #424242;
+	box-shadow: 0px 2px 3px rgba(0,0,0,0.5);
+}
 
-
-}*/
+.navbar-inverse .navbar-brand {
+	color: #fff;
+}
+.navbar-inverse .navbar-nav > li > a {
+	color:#fff;
+}
 
 .img-centered {
 	margin: 0 auto;
@@ -39,6 +44,11 @@ body{
 	position: static;
 	width: 1040px;
     margin: 0 auto;
+	background-color: rgba(0,0,0,0.5);
+	border-radius: 4px;
+	box-shadow: 0px 1px 2px rgba(255,255,255,0.5);
+	padding-left: 30px;
+	padding-right: 30px;
 }
 
 .carousel-caption h1{
@@ -46,7 +56,13 @@ body{
 	font-weight: bold;
 
 }
-
+.carousel-caption .btn{
+	background-color: #1976D2;
+	transition: background-color 300ms cubic-bezier(0.51, 0.15, 0.57, 0.85);
+}
+.carousel-caption .btn:hover{
+	background-color: #2196F3;
+}
 .slider-subhead{
 	font-style: 20px;
 }
