--- a/css/styles.css
+++ b/css/styles.css
@@ -1,13 +1,18 @@
+@import url(https://fonts.googleapis.com/css?family=Lato:400,300,700,900,400italic);
+
 *, *:after, *:before{
 	-webkit-box-sizing:border-box;
 	-moz-box-sizing:border-box;
 	box-sizing:border-box;
 }
-
+* {
+	box-sizing: border-box;
+}
 html, body{
 	height: 100%;
 	width: 100%;
 	padding-top: 25px;
+	font-family: 'Lato', sans-serif;
 }
 
  h1.heading{
@@ -15,8 +20,13 @@ html, body{
  	font-weight: bold;
  }
 
+section {
+	padding: 40px 40px 50px;
+	box-sizing: border-box;
+}
+
 section.blue-bg{
-	background-color: #0094C6;
+	background-color: #005E7C;
 }
 
 body{
@@ -34,8 +44,17 @@ body{
 }
 .navbar-inverse .navbar-nav > li > a {
 	color:#fff;
+    border-top: 2px solid transparent;
+    border-bottom: 2px solid transparent;
+    transition: border 400ms ease-in,background-color 400ms ease-in;
+    font-weight: 600;
 }
-
+.navbar-inverse .navbar-nav > li > a:hover, .navbar-inverse .navbar-nav > li > a:focus {
+	color: #fff;
+	background-color: rgba(255,255,255,0.2);
+	border-top: 2px solid #1976D2;
+	border-bottom: 2px solid #1976D2;
+}
 .img-centered {
 	margin: 0 auto;
 }
@@ -45,10 +64,10 @@ body{
 	width: 1040px;
     margin: 0 auto;
 	background-color: rgba(0,0,0,0.5);
-	border-radius: 4px;
-	box-shadow: 0px 1px 2px rgba(255,255,255,0.5);
+	border-radius: 7px;
 	padding-left: 30px;
 	padding-right: 30px;
+	border: 1px solid #616161;
 }
 
 .carousel-caption h1{
@@ -59,25 +78,69 @@ body{
 .carousel-caption .btn{
 	background-color: #1976D2;
 	transition: background-color 300ms cubic-bezier(0.51, 0.15, 0.57, 0.85);
+	border:1px solid transparent;
 }
 .carousel-caption .btn:hover{
-	background-color: #2196F3;
+	background-color: rgba(255,255,255,0.4);
 }
 .slider-subhead{
-	font-style: 20px;
+	font-style: 20px; 
+}
+/* LINE */
+.line {
+	width: 700px;
+    max-width: 100%;
+    height: 2px;
+	margin: 0 auto 30px;
+}
+.line-white {
+    background: radial-gradient(#005E7C, white, white);
+
+} 
+
+.line-blue {
+    background: radial-gradient( white, #005E7C, #005E7C);
 }
 
+/* LINE */
+
+.box-inset-top {
+    box-shadow: inset 0 2px 2px rgba(0,0,0,0.3);
+}
+
+.box-inset-bottom {
+    box-shadow: inset 0 -2px 2px rgba(0,0,0,0.3);
+}
 .subhead{
 	padding-top: 20px;
+	padding-bottom: 20px;
 	font-size: 18px;
 	line-height: 30px;
+	font-weight: 600;
+	text-align: left;
+    color: #424242;
 }
-
-
-.section-title h1.heading {
+.section-title > h2.heading {
     color: #005E7C;
-    font-size: 55px;
+    font-size: 47px;
     font-weight: bold;
+}
+.learn-more{
+	background-color: #005E7C;
+	padding: 10px 15px;
+	box-sizing: border-box;
+	color: white;
+	font-weight: 900;
+	letter-spacing: 0.5px;
+	transition: background-color 450ms ease-in-out;
+	text-shadow: initial;
+    box-shadow: 0px 1px 2px rgba(0,0,0,0.5);
+    font-size: 18px;
+}
+.learn-more:hover{
+	background-color: #4C8EA3;
+	text-decoration: none;
+	color:white;
 }
 
 
@@ -92,12 +155,35 @@ body{
 	opacity: 0.8;
 }
 
-.service-box p {
-    margin-bottom: 80px;
-    font-size: 18px;
-	line-height: 30px;
+.service-row {
+	margin-bottom: 20px;
 }
 
+.service-box p {
+    /*margin-bottom: 80px;*/
+    font-size: 18px;
+    text-align: left;
+}
+
+.service-box > h3 {
+	font-weight: 700;
+	font-size: 20px;
+    text-align: left;
+
+}
+.view-more {
+	color: #fff;
+	font-size: 20px;
+    background-color: transparent;
+    transition: background-color 300ms ease-in-out;
+    border: 1px solid white;
+    border-radius: 0;
+}
+.view-more:hover {
+	color: white;
+	text-decoration: none;
+	background: rgba(255,255,255,0.2);
+}
 
 hr {
     max-width: 50px;
@@ -109,7 +195,9 @@ hr.light{
 	border-color: #fff;
 }
 
-
+.parallax-section {
+	padding:0;
+}
 
 /*Footer Section*/
 
