Services page done

--- a/css/styles.css
+++ b/css/styles.css
@@ -29,6 +29,31 @@ body{
 	overflow-x: hidden;
 }
 
+.page-title {
+	background-size: cover;
+	background-repeat: no-repeat;
+	background-position: center;
+	height: 200px;
+	position: relative;
+	color:white; 
+}
+.page-title .container {
+	position: relative;
+	z-index: 9;
+}
+.page-title .container h1 {
+	font-size: 55px;
+}
+.overlay {
+	position: absolute;
+	top: 0;
+	bottom:0;
+	left: 0;
+	right: 0;
+	background-color: rgba(0,0,0,0.3);
+	z-index: 1;
+}
+
 .navbar-inverse {
 	background-color: #424242;
 	box-shadow: 0px 2px 3px rgba(0,0,0,0.5);
@@ -63,6 +88,7 @@ body{
 	padding-left: 30px;
 	padding-right: 30px;
 	border: 1px solid #616161;
+	max-width: 100%;
 }
 
 .carousel-caption h1{
@@ -241,9 +267,10 @@ label {
 
 footer{
 	font-size: 12px;
-	/*margin-top: 30px;*/
-	padding-bottom: 30px; 
-	/*background-color: skyblue;*/
+	padding-bottom: 10px;
+	box-shadow: 0 -1px 4px rgba(0,0,0,0.3);
+	background-color: #424242;
+	color: white;
 }
 
 footer .social-icon{
@@ -258,10 +285,11 @@ footer .social-icon a{
     padding-left: 8px;
     display: inline-block;
     transition: color;
+    color: white;
 }
 
 .fa-fw {
-	color: #005E7C;
+	color: #fff;
 	transition: color 300ms ease-in;
 }
 
