--- a/css/styles.css
+++ b/css/styles.css
@@ -73,14 +73,14 @@ body{
 .navbar-inverse .navbar-nav > li > a:hover, .navbar-inverse .navbar-nav > li > a:focus {
 	color: #fff;
 	background-color: rgba(255,255,255,0.2);
-	border-top: 3px solid #005E7C;
-	border-bottom: 3px solid #005E7C;
+	border-top: 3px solid #1976D2;
+	border-bottom: 3px solid #1976D2;
 }
 .navbar-inverse .navbar-nav > li > a.active-menu {
 	color: #fff;
 	background-color: rgba(255,255,255,0.2);
-	border-top: 3px solid #005E7C;
-	border-bottom: 3px solid #005E7C;
+	border-top: 3px solid #1976D2;
+	border-bottom: 3px solid #1976D2;
 }
 .img-centered {
 	margin: 0 auto;
@@ -189,7 +189,6 @@ h2.heading-white {
 	color:white;
 }
 
-
 .parallax {
     background-attachment: fixed !important;
     background-position: center center;
@@ -200,7 +199,9 @@ h2.heading-white {
 }
 
 .jumbotron{
-	opacity: 0.8;
+	border: 1px solid #616161;
+	background-color: rgba(0,0,0,0.7);
+	color: white;
 }
 
 .service-row {
@@ -269,7 +270,12 @@ label {
 	outline: none;
 	box-shadow: inset 0 0 11px 1px rgba(0,0,0,0.5);
 }
-
+.col-md-7 h2 {
+	margin-top: 0;
+}
+.about-content {
+	font-size: 15px;
+}
 .contact-form {
 	position: relative;
 	z-index: 10;
