--- a/css/styles.css
+++ b/css/styles.css
@@ -65,21 +65,19 @@ body{
 }
 .navbar-inverse .navbar-nav > li > a {
 	color:#fff;
-    border-top: 3px solid transparent;
-    border-bottom: 3px solid transparent;
-    transition: border 400ms ease-in,background-color 400ms ease-in;
-    font-weight: 600;
+  border-top: 3px solid transparent;
+  border-bottom: 3px solid transparent;
+  transition: border 400ms ease-in,background-color 400ms ease-in;
+  font-weight: 600;
 }
 .navbar-inverse .navbar-nav > li > a:hover, .navbar-inverse .navbar-nav > li > a:focus {
 	color: #fff;
 	background-color: rgba(255,255,255,0.2);
-	border-top: 3px solid #1976D2;
 	border-bottom: 3px solid #1976D2;
 }
 .navbar-inverse .navbar-nav > li > a.active-menu {
 	color: #fff;
 	background-color: rgba(255,255,255,0.2);
-	border-top: 3px solid #1976D2;
 	border-bottom: 3px solid #1976D2;
 }
 .img-centered {
@@ -385,6 +383,29 @@ label {
             transform: translateY(-900px) rotate(600deg);
   }
 }
+
+/* MAP SECTION*/
+
+.map-container {
+  position: relative;
+}
+#map {
+  width: 100%;
+  height: 400px;
+  position: relative;
+  z-index: 1
+}
+
+.map-overlay {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  background-color: transparent;
+  z-index: 2;
+}
+
 /*Footer Section*/
 
 
