--- a/css/styles.css
+++ b/css/styles.css
@@ -38,6 +38,9 @@ body{
 	color:white;
 	box-shadow: 0px 1px 1px 1px rgba(0,0,0,0.5);
 }
+section .container {
+  max-width: 100%;
+}
 .page-title .container {
 	position: relative;
 	z-index: 9;
