--- a/css/styles.css
+++ b/css/styles.css
@@ -57,7 +57,9 @@ section .container {
 	background-color: rgba(0,0,0,0.3);
 	z-index: 1;
 }
-
+/*.navbar-fixed-top {
+  position: absolute;
+}*/
 .navbar-inverse {
 	background-color: #424242;
 	box-shadow: 0px 2px 3px rgba(0,0,0,0.5);
