--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,9 @@
 @import url(https://fonts.googleapis.com/css?family=Lato:400,300,700,900,400italic);
+/*@import url(https://fonts.googleapis.com/css?family=Catamaran:400,500,600,700);*/
 
+.p-b-50 {
+  padding-bottom: 50px;
+}
 *, *:after, *:before{
 	-webkit-box-sizing:border-box;
 	-moz-box-sizing:border-box;
@@ -12,7 +16,7 @@ html, body{
 	height: 100%;
 	width: 100%;
 	padding-top: 25px;
-	font-family: 'Lato', sans-serif;
+  font-family: 'Lato', sans-serif;
 }
 
 section {
@@ -73,7 +77,7 @@ section .container {
   border-top: 3px solid transparent;
   border-bottom: 3px solid transparent;
   transition: border 400ms ease-in,background-color 400ms ease-in;
-  font-weight: 600;
+  font-weight: 400;
 }
 .navbar-inverse .navbar-nav > li > a:hover, .navbar-inverse .navbar-nav > li > a:focus {
 	color: #fff;
@@ -146,23 +150,23 @@ section .container {
 .box-inset-bottom {
     box-shadow: inset 0 -2px 2px rgba(0,0,0,0.3);
 }
-.subhead{
+.subhead, .subhead-white{
 	padding-top: 20px;
 	padding-bottom: 20px;
 	font-size: 18px;
 	line-height: 30px;
-	font-weight: 600;
+	/*font-weight: 400;*/
 	text-align: left;
-    color: #424242;
+  color: #424242;
 }
-.subhead-white{
+.subhead-white{/*
 	padding-top: 20px;
 	padding-bottom: 20px;
 	font-size: 18px;
 	line-height: 30px;
-	font-weight: 600;
-	text-align: left;
-    color: white;
+	font-weight: 400;
+	text-align: left;*/
+  color: white;
 }
 h2.heading {
     color: #005E7C;
@@ -411,6 +415,9 @@ label {
   z-index: 2;
 }
 
+.subhead strong{
+  font-weight: 900;
+}
 /*Footer Section*/
 
 
@@ -461,7 +468,9 @@ a:hover .fa-linkedin-square {
 .ondesktop {
   display: block;
 }
-
+.navbar-brand > img {
+    z-index: 99999;
+}
 /* MOBILE STYLING */
 @media (max-width: 991px) {
   .onmobile {
@@ -503,17 +512,36 @@ a:hover .fa-linkedin-square {
     padding-right: 10px;
     padding-left: 10px;
   }
+  .carousel-control {
+    display: none;
+  }
+  .carousel-caption h1 {
+    font-size: 35px;
+  }
   .slider-subhead {
     font-size: 14.5px;
   }
   .carousel-indicators {
-    bottom: 0px;
+    bottom: -12px;
   }
   h2.heading, h2.heading-white {
     font-size: 30px; 
   }
-  .subhead {
+  .subhead, .subhead-white {
     font-size: 15px;
     line-height: 27px;
+  }
+  #portfolio .portfolio-item .portfolio-link .portfolio-hover {
+    opacity: 1
+  }
+  #portfolio .portfolio-item .portfolio-link .portfolio-hover:hover {
+    opacity: 1;
+  }
+  .page-title .container h1 {
+    font-size: 45px;
+  }
+  section {
+    padding-top: 20px;
+    padding-bottom: 20px;
   }
 }
