--- a/css/styles.css
+++ b/css/styles.css
@@ -201,8 +201,8 @@ h2.heading-white {
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
-    padding-top: 0px;
-    padding-bottom: 0px;
+/*    padding-top: 0px;
+    padding-bottom: 0px;*/
 }
 
 .jumbotron{
