fixing padding issues on parallax

--- a/css/styles.css
+++ b/css/styles.css
@@ -200,7 +200,7 @@ h2.heading-white {
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
-    background-position: initial;
+    background-position: initial !important;
 
 /*    padding-top: 0px;
     padding-bottom: 0px;*/
